; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_loss.c_test_bidirectional.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_loss.c_test_bidirectional.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@loss_cond_down = common dso_local global i32 0, align 4
@loss_cond_up = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"50%\00", align 1
@loss_core = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"25%\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"10%\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"5%\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"2.5%\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"1.6%\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_bidirectional to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_bidirectional() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %30, %0
  %3 = load i64, i64* %1, align 8
  %4 = icmp ne i64 %3, 100
  br i1 %4, label %5, label %33

5:                                                ; preds = %2
  %6 = call i32 @init_cond_rand(i32* @loss_cond_down, i32 1, i32 2)
  %7 = call i32 @init_cond_rand(i32* @loss_cond_up, i32 1, i32 2)
  %8 = load i32, i32* @loss_core, align 4
  %9 = call i32 @subtest(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 @init_cond_rand(i32* @loss_cond_down, i32 1, i32 4)
  %11 = call i32 @init_cond_rand(i32* @loss_cond_up, i32 1, i32 4)
  %12 = load i32, i32* @loss_core, align 4
  %13 = call i32 @subtest(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  %14 = call i32 @init_cond_rand(i32* @loss_cond_down, i32 1, i32 10)
  %15 = call i32 @init_cond_rand(i32* @loss_cond_up, i32 1, i32 10)
  %16 = load i32, i32* @loss_core, align 4
  %17 = call i32 @subtest(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %16)
  %18 = call i32 @init_cond_rand(i32* @loss_cond_down, i32 1, i32 20)
  %19 = call i32 @init_cond_rand(i32* @loss_cond_up, i32 1, i32 20)
  %20 = load i32, i32* @loss_core, align 4
  %21 = call i32 @subtest(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i32 %20)
  %22 = call i32 @init_cond_rand(i32* @loss_cond_down, i32 1, i32 40)
  %23 = call i32 @init_cond_rand(i32* @loss_cond_up, i32 1, i32 40)
  %24 = load i32, i32* @loss_core, align 4
  %25 = call i32 @subtest(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i32 %24)
  %26 = call i32 @init_cond_rand(i32* @loss_cond_down, i32 1, i32 64)
  %27 = call i32 @init_cond_rand(i32* @loss_cond_up, i32 1, i32 64)
  %28 = load i32, i32* @loss_core, align 4
  %29 = call i32 @subtest(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %5
  %31 = load i64, i64* %1, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %1, align 8
  br label %2

33:                                               ; preds = %2
  ret void
}

declare dso_local i32 @init_cond_rand(i32*, i32, i32) #1

declare dso_local i32 @subtest(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
